# dpdk-sys

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci-env  Dockerfile.compile-env  Dockerfile.dev-env  README.md  builds.template.yml  builds.yml  default.nix  environments.yml  justfile  plan.template.md  shell.nix  update-rust-pins.sh  update-version-pinning.sh
.github/: dependabot.yml
.github/workflows/: build-and-push-container.yml  build.yml  bump.yml  scratch.yml  update-dp.yml  update-pins.yml  update.yml
design-docs/: book.toml
design-docs/src/: SUMMARY.md
design-docs/src/principals/: index.md  no-shell.md
nix/: flags.nix  versions.nix  versions.nix.template
nix/base-image/: default.nix
nix/dpdk/: default.nix
nix/dpdk-wrapper/: default.nix
nix/dpdk-wrapper/src/: dpdk_wrapper.c  dpdk_wrapper.h
nix/dplane-plugin/: default.nix
nix/dplane-rpc/: default.nix
nix/frr/: clippy-helper.nix  default.nix
nix/frr-agent/: default.nix
nix/frr-config/: default.nix
nix/frr/etc/: group  passwd
nix/frr/etc/frr/: daemons  frr.conf
nix/frr/patches/: vtysh-extensions.h.patch
nix/kopium/: default.nix
nix/mdbook-alerts/: default.nix
nix/perftest/: default.nix
nix/plantuml-wrapper/: default.nix
nix/protobufc/: default.nix
nix/rdma-core/patches/: versioning.patch
nix/shell-fixup/: default.nix
nix/shell-fixup/src/: os-release
nix/shell-fixup/src/etc/: bash.bashrc  group  passwd
nix/test-runner/: default.nix
scripts/: bump.sh  confirm-sources.sh  estimate-jobs.sh  plan.sh  re-link.sh  sbom.sh  update-version-pinning.sh
(+7 files in other folders)
