[workspace]

members = [
	"dpdk-sys",
	"dpdk-sysroot-helper",
]
resolver = "2"

[workspace.dependencies]

bindgen = { version = "0.70.1" }
cc = { version = "1.1.21" }
doxygen-rs = { version = "0.4.0" }
rustc_version = { version = "0.4.1" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = false
strip = "none"
# NOTE: I expect that we will use objcopy / strip to keep the debug symbols in a separate file
# We _could_ just compile without them, but if you need debug symbols for a release build, you
# are already having a rough day, and if you need them and don't have them, then you are having a
# worse day :)
#
# That said, debug-assertions should still be false so that compiler optimizations are not
# inhibited.
debug = true
debug-assertions = false

[profile.dev]
opt-level = 0
lto = false
incremental = true
debug = true

[profile.analysis]
inherits = "dev"
codegen-units = 1
lto = "thin"
incremental = false

[profile.fuzz]
inherits = "release"
